metadata/force-app/main/default/objects/CustomName_ccNxY__c/CustomName_ccNxY__c.object-meta.xml
<CustomObject>
    <description>Description_noOuT</description>
    <label>CustomLabel_PiqfV</label>
    <nameField>
        <label>CustomLabel_PiqfV</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PiqfVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>