metadata/force-app/main/default/objects/CustomName_ccNxY__c/fields/CustomField_GQrKu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GQrKu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkpwat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>